[bumpversion]
current_version = 0.13.2
commit = True
tag = True

[metadata]
name = q2-micom
author = Christian Diener
author_email = mail@cdiener.com,
description = QIIME 2 plugin for metabolic modeling of microbial communities.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/micom-dev/q2-micom
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
keywords =
	microbiome
	modeling
	metabolism
	community

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
	cobra>=0.29.0
	micom>=0.35.0
	jinja2>=2.10.3
	qiime2>=2023.9
	rich>=6.0
	pandas>=1.0
tests_require =
	coverage
	pytest
	pytest-cov
	flake8

[options.package_data]
q2_micom =
	citations.bib

[options.entry_points]
qiime2.plugins =
	q2-micom = q2_micom.plugin_setup:plugin

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:q2_micom/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tool:pytest]
filterwarnings =
	ignore::DeprecationWarning
	ignore::FutureWarning

[bdist_wheel]
universal = 0

[coverage:run]
source = q2_micom
branch = True
omit = q2_micom/tests/*

[coverage:report]
exclude_lines =
	pragma: no cover

	def __repr__
	if self\.debug

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:
ignore_errors = True

[flake8]
exclude = q2_micom/tests/*
max-line-length = 88

[pydocstyle]
convention = numpy
